fix alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,6 +80,7 @@ body {
   width: 30%;
   height: 400px;
   border: solid white 5px;
+  vertical-align: middle;
 }
 
 .quickfacts {
